fix right gap nav menu

--- a/wp-content/themes/resi/style.css
+++ b/wp-content/themes/resi/style.css
@@ -603,7 +603,7 @@ a:active {
     display: none;
     list-style: none;
     margin: 0;
-    padding-left: 12.4%; /* EDITED */
+    padding-left: 12%; /* EDITED */
     padding-right: 12%; /* EDITED */
 }
 
@@ -2024,7 +2024,7 @@ body {
 }
 
 #authorName{
-    padding-left: 13%;
+    padding-left: 12.6%;
     margin-top: 50px;
 }
 
@@ -2046,7 +2046,7 @@ body {
 }
 
 #nav-header{
-     left: -10px;
+     left: 0px; /* EDITED */
     width: 100%;
 }
 
